Bug 397960 - When installing an RPM file, Discover fails silently but indicates success (the "Uninstall" button appears)
Summary: When installing an RPM file, Discover fails silently but indicates success (t...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-08-28 00:24 UTC by Alexander Wilms
Modified: 2018-10-09 23:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Wilms 2018-08-28 00:24:50 UTC
I tried to install the windows95-linux-1.3.0.x86_64.rpm package from https://github.com/felixrieseberg/windows95/releases.

No error was shown and afterwards, Discover displayed the red 'uninstall' button. However, no binary was installed.

Then I tried installing it via the terminal:
sudo rpm -i windows95-linux-1.3.0.x86_64.rpm 
[sudo] Password for user: 
Error: Missing dependencies:
        lsb is required by windows95-1.3.0-1.x86_64

I installed lsb and was then able to install the package via command line.

This is on Fedora 28.
Comment 1 Nate Graham 2018-08-28 19:16:51 UTC
If you use
Comment 2 Nate Graham 2018-08-28 19:18:00 UTC
If you use `dnf` to install the package (i.e. `
sudo dnf install windows95-linux-1.3.0.x86_64.rpm`), does it offer to automatically install the dependencies?
Comment 3 Alexander Wilms 2018-08-28 19:34:16 UTC
No
Comment 4 Nate Graham 2018-08-28 19:37:49 UTC
Sounds like a problem with the package. If it's not properly indicating its dependencies, then Discover can't know that they need to be installed. Please report this on https://github.com/felixrieseberg/windows95/issues

That said, Discover probably shouldn't pretend that everything went okay when the package couldn't be installed. Discover should display a pop-up message or an inline message (note: NOT a passiveNotification) informing you that the package is broken and probably needs to be installed by hand.
Comment 5 Alexander Wilms 2018-08-28 19:43:54 UTC
Sorry, I misspoke. I uninstalled lsb and windows95 and then dnf _does_ offer to install the dependencies when installing the .rpm.
Comment 6 Nate Graham 2018-08-28 19:56:52 UTC
OK, then the package is fine and it's all in Discover or the DNF packagekit plugin.
Comment 7 Aleix Pol 2018-10-09 23:18:59 UTC
Git commit b0867794275ba7957ab4071ae272665f285160e7 by Aleix Pol.
Committed on 09/10/2018 at 23:13.
Pushed by apol into branch 'Plasma/5.14'.

pk: Don't mark local packages as installed upon simulation

Non-simulated run will emit more errors.

M  +3    -2    libdiscover/backends/PackageKitBackend/PKTransaction.cpp

https://commits.kde.org/discover/b0867794275ba7957ab4071ae272665f285160e7