pk: Don't mark local packages as installed upon simulation

Non-simulated run will emit more errors.

BUG: 397960